statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: server
  namespace: minio
spec:
  selector:
    matchLabels:
      app: minio
  serviceName: server
  replicas: 1
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: server
          image: minio/minio:RELEASE.2024-05-10T01-41-38Z
          command: ["minio", "server", "/data", "--console-address", ":9001"]
          ports:
            - containerPort: 9000
              name: minio
            - containerPort: 9001
              name: console
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
              claimName: data0
