services.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: minio
  labels:
    app: minio
spec:
  ports:
    - port: 80
      name: minio
      targetPort: minio
  selector:
    app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: console
  namespace: minio
  labels:
    app: minio
  annotations:
    tailscale.com/expose: "true"
spec:
  ports:
    - port: 80
      name: console
      targetPort: console
  selector:
    app: minio
