ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
  labels:
      app: minio
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
      - host: "minio.dfranklin.dev"
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                    name: server
                    port: { name: minio }
  tls:
      - hosts:
          - "minio.dfranklin.dev"
        secretName: server
